[project]
name = "mkdocs-modelo"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius"},
    {name = "Juan Pablo"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material (>=9.7.0,<10.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
